--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
